Fix minor spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1009,7 +1009,7 @@ th {
 
 #title {
     text-align: center;
-    padding-top: 10px;
+    padding-top: 20px;
 }
 
 #website {
